Add footer markup and fix footer typescript error

--- a/src/styles/utils/_fonts.scss
+++ b/src/styles/utils/_fonts.scss
@@ -36,7 +36,7 @@ p {
 }
 
 .category-card-header {
-  font-weight: bold;
+  font-weight: 700;
   font-size: pixelsToRems(15);
   letter-spacing: pixelsToRems(1.07);
 
