Style footer for tablet

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,22 +1,25 @@
 footer {
   background-color: $black;
   color: $pureWhite;
-  padding: 3rem 2rem 2rem 2rem;
   text-align: center;
-  position: relative;
+  
+  .wrapper {
+    position: relative;
+    padding: 3.25rem 2rem 2rem 2rem;
 
-  &::before {
-    content: "";
-    background-color: $orange;
-    height: 4px;
-    width: 30%;
-    position: absolute;
-    top: 0;
-    margin-left: 0;
-    margin-right: 0;
-    transform: translateX(-50%)
-
+    &::before {
+      content: "";
+      background-color: $orange;
+      height: 4px;
+      width: 101px;
+      position: absolute;
+      top: 0;
+      margin-left: 0;
+      margin-right: 0;
+      transform: translateX(-50%)
+    }
   }
+
 
   .top {
     @include flexCenter(column);
@@ -55,6 +58,7 @@ footer {
     ul {
       display: flex;
       gap: 1rem;
+      align-items: center;
 
       a {
         svg {
@@ -68,5 +72,46 @@ footer {
         }
       }
     }
+  }
+
+  @media (min-width: 768px) {
+    text-align: left;
+    padding-inline: 2.5rem;
+    
+    .wrapper {
+      padding: 3.75rem 0 2.85rem 0;
+
+      &::before {
+        transform: none;
+      }
+    }
+
+    .top {
+      align-items: flex-start;
+      margin-bottom: 2rem;
+      gap: 2rem;
+
+      ul {
+        flex-direction: row;
+      }
+    }
+
+    .bottom {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 5rem;
+
+      &__blurb {
+        grid-column: span 2;
+      }
+
+      ul {
+        justify-content: flex-end;
+      }
+    }
+  }
+
+  @media (min-width: 1100px) {
+    
   }
 }
