--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,11 +1,12 @@
 footer {
+  @include flexCenter;
   background-color: $black;
   color: $pureWhite;
   text-align: center;
   
   .wrapper {
     position: relative;
-    padding: 3.25rem 2rem 2rem 2rem;
+    padding: 3.25rem 1.5rem 2rem 1.5rem;
 
     &::before {
       content: "";
@@ -112,6 +113,31 @@ footer {
   }
 
   @media (min-width: 1100px) {
-    
+    .wrapper {
+      padding: 4.7rem 0 3rem 0;
+    }
+
+    .top {
+      flex-direction: row;
+      justify-content: space-between;
+      margin-bottom: 2.25rem;
+    }
+
+    .bottom {
+      gap: 3.5rem;
+
+      &__blurb {
+        max-width: 540px;
+        grid-row: 1;
+        grid-column: 1;
+      }
+
+      ul {
+        grid-row: 1;
+        grid-column: 2;
+        height: 100%;
+        align-items: flex-end;
+      }
+    }
   }
 }
