--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,6 +1,19 @@
 .home {
+  background-color: $grey;
+  
   &__bottom {
-    background-color: $grey;
     padding: 2.5rem 1.5rem 7.5rem 1.5rem;
+  }
+
+  @media (min-width: 768px) {
+    &__bottom {
+      padding: 6rem 2.5rem;
+    }
+  }
+
+  @media (min-width: 1100px) {
+    &__bottom {
+      padding-block: 7.5rem 12.5rem;
+    }
   }
 }
