--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -2,6 +2,8 @@
   background-color: $grey;
   
   &__bottom {
+    @include flexCenter;
+    width: 100%;
     padding: 2.5rem 1.5rem 7.5rem 1.5rem;
   }
 
