--- a/src/styles/components/_category-list.scss
+++ b/src/styles/components/_category-list.scss
@@ -2,19 +2,36 @@
   display: flex;
   flex-direction: column;
   gap: 4.25rem;
+  width: 100%;
 
   li {
     @include flexCenter(column);
     gap: 1rem;
     background-color: $grey;
     border-radius: 8px;
-    padding-block: 5.5rem 1.375rem;
     position: relative;
 
+    &:nth-child(3) {
+      .category-list__image-container {
+        top: -2rem;
+      }
+    }
+    
     a {
-      display: flex;
-      align-items: center;
+      @include flexCenter(column);
       gap: 0.75rem;
+      padding-block: 5.5rem 1.375rem;
+      width: 100%;
+      
+      span {
+        @include flexCenter;
+        gap: 0.75rem;
+        transition-duration: 200ms;
+      }
+
+      &:hover span, &:focus span {
+        color: $orange;
+      }
     }
   }
 
@@ -28,9 +45,33 @@
       width: 100%;
     }
   }
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0.625rem;
+
+    li {
+      min-width: 223px;
+      width: 100%;
+    }
+  }
   
   @media (min-width: 1100px) {
+    li {
+      a {
+        padding-block: 7.25rem 1.875rem;
+      }
+      
+      &:nth-child(3) {
+        .category-list__image-container {
+          top: -3.5rem;
+        }
+      }
+    }
+
     &__image-container {
+      top: -4.5rem;
       width: 217px;
     }
   }
