style navbar for mobile

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,3 +1,7 @@
-@import "footer";
-@import "bottom-banner";
+@import "nav";
+
 @import "category-list";
+
+@import "bottom-banner";
+
+@import "footer";
