--- a/src/styles/components/_category-list.scss
+++ b/src/styles/components/_category-list.scss
@@ -13,7 +13,7 @@
 
     &:nth-child(3) {
       .category-list__image-container {
-        top: -2rem;
+        top: -2.5rem;
       }
     }
     
@@ -37,7 +37,7 @@
 
   &__image-container {
     position: absolute;
-    top: -2.5rem;
+    top: -3rem;
     width: 143px;
 
     img {
@@ -52,12 +52,13 @@
     gap: 0.625rem;
 
     li {
-      min-width: 223px;
-      width: 100%;
+      width: max(100%, 223px);
     }
   }
   
   @media (min-width: 1100px) {
+    gap: 1.875rem;
+
     li {
       a {
         padding-block: 7.25rem 1.875rem;
