--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,7 +16,12 @@ a {
 li {
   list-style-type: none;
 }
+html {
+  height: 100%;
+  // scroll-behavior: smooth;
 
-body {
-  background-color: pink;
+  body {
+    background-color: pink;
+    height: 100%;
+  }
 }
