--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -9,6 +9,10 @@
   height: 91px;
   width: 100%;
 
+  &__logo {
+    display: flex;
+  }
+
   .wrapper {
     display: flex;
     justify-content: space-between;
@@ -23,6 +27,7 @@
     background: none;
     border: none;
     padding: 1.5rem;
+    cursor: pointer;
   }
 
   @media (min-width: 768px) {
@@ -47,7 +52,7 @@
     }
 
     &__cart-button {
-      padding: 2rem 0 !important;
+      padding: 0 !important;
     }
 
     &__logo {
@@ -64,6 +69,15 @@
       margin-right: auto;
       left: 0;
       right: 0;
+      width: fit-content;
+
+      a {
+        transition-duration: 200ms;
+  
+        &:hover, &:focus {
+          color: $orange;
+        }
+      }
     }
   }
 }
