Add bottom border to nav

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,5 +1,10 @@
 .home {
   background-color: $white;
+
+  .hero {
+    height: 500px;
+    background-color: $pureBlack
+  }
   
   &__bottom {
     @include flexCenter;
