--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -17,6 +17,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid rgba($pureWhite, 0.1);
+    height: 100%;
   }
 
   ul {
@@ -31,28 +33,32 @@
   }
 
   @media (min-width: 768px) {
+    .wrapper {
+      margin-inline: 2.4rem;
+    }
+
     &__logo {
       position: absolute;
       left: 6rem;
     }
 
-    button {
-      padding: 2.4rem;
+    &__menu-button {
+      transform: translateX(-1.5rem);
+    }
+    
+    &__cart-button {
+      transform: translateX(1.5rem);
     }
   }
 
   @media (min-width: 1100px) {
     .wrapper {
       box-sizing: content-box;
-      padding-inline: 2.5rem;
+      margin-inline: 2.5rem;
     }
 
     &__menu-button {
       display: none;
-    }
-
-    &__cart-button {
-      padding: 0 !important;
     }
 
     &__logo {
