--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,5 +1,10 @@
 @import "subcomponents";
 
+@import "home";
+// @import "category";
+// @import "product";
+// @import "cart";
+
 @import "nav";
 @import "bottom-banner";
 @import "footer";
