--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,10 +18,9 @@ li {
 }
 html {
   height: 100%;
-  // scroll-behavior: smooth;
 
   body {
-    background-color: pink;
+    background-color: $black;
     height: 100%;
   }
 }
