Make border radius reusable variable and style feature secondary for mobile

--- a/src/styles/components/home/_feature-primary.scss
+++ b/src/styles/components/home/_feature-primary.scss
@@ -1,7 +1,7 @@
 .feature-primary {
   @include flexCenter(column);
   gap: 2.25rem;
-  border-radius: 8px;
+  border-radius: $borderRadius;
   background-color: $orange;
   padding: 3.875rem 1.4375rem 4.4375rem 1.4375rem;
   width: 100%;
