--- a/src/styles/components/_bottom-banner.scss
+++ b/src/styles/components/_bottom-banner.scss
@@ -8,7 +8,7 @@
     display: flex;
     
     img {
-      border-radius: 8px;
+      border-radius: $borderRadius;
       object-fit: cover;
       width: 100%;
     }
