--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -95,7 +95,7 @@
   background-color: $white;
   padding: 4.5rem 1.5rem 2rem 1.5rem;
   height: min(75%, 750px);
-  border-radius: 0 0 8px 8px;
+  border-radius: 0 0 $borderRadius $borderRadius;
   
   overflow-y: scroll;
   scrollbar-width: none;
