--- a/src/styles/components/subcomponents/_category-list.scss
+++ b/src/styles/components/subcomponents/_category-list.scss
@@ -8,7 +8,7 @@
     @include flexCenter(column);
     gap: 1rem;
     background-color: $grey;
-    border-radius: 8px;
+    border-radius: $borderRadius;
     position: relative;
 
     &:nth-child(3) {
