Style feature tertiary for tablet and desktop

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -15,7 +15,7 @@
   &__featured-products {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 2rem;
     width: 100%;
   }
   
@@ -28,6 +28,10 @@
   @media (min-width: 1100px) {
     &__bottom {
       padding-block: 12rem 12.5rem;
+    }
+
+    &__featured-products {
+      gap: 3rem;
     }
   }
 }
