--- a/src/styles/components/home/_feature-tertiary.scss
+++ b/src/styles/components/home/_feature-tertiary.scss
@@ -1,3 +1,40 @@
 .feature-tertiary {
-  
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+
+  picture {
+    img {
+      border-radius: $borderRadius;
+      object-fit: cover;
+      width: 100%;
+    }
+  }
+
+  &__words {
+    border-radius: $borderRadius;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+    background-color: $grey;
+    padding: 2.5rem 7.3%;
+
+    .button {
+      width: fit-content;
+    }
+  }
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    gap: 0.6875rem;
+
+    picture, &__words {
+      width: 50%;
+    }
+  }
+
+  @media (min-width: 768px) {
+    gap: 1.875rem;
+  }
 }
