--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,1 +1,28 @@
 @import "home";
+
+.page {
+  background-color: $white;
+  
+  .bottom {
+    @include flexCenter;
+    width: 100%;
+    padding: 5rem 1.5rem 7.5rem 1.5rem;
+    
+    .wrapper {
+      @include flexCenter(column);
+      gap: 7.5rem;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .bottom {
+      padding: 8rem 2.5rem 6rem 2.5rem;
+    }
+  }
+
+  @media (min-width: 1100px) {
+    .bottom {
+      padding-block: 12rem 12.5rem;
+    }
+  }
+}
