--- a/src/styles/pages/_category.scss
+++ b/src/styles/pages/_category.scss
@@ -1,3 +1,17 @@
 .category {
   
+  header {
+    @include flexCenter;
+    background-color: $pureBlack;
+    color: $pureWhite;
+    padding: 2rem;
+    padding-top: 7.625rem;
+  }
+
+  @media (min-width: 768px) {
+    header {
+      padding: 6rem;
+      padding-top: 12.2rem;
+    }
+  }
 }
