--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -7,7 +7,7 @@
   .bottom {
     @include flexCenter;
     width: 100%;
-    padding: 5rem 1.5rem 7.5rem 1.5rem;
+    padding: 4rem 1.5rem 7.5rem 1.5rem;
     
     .wrapper {
       @include flexCenter(column);
@@ -17,13 +17,13 @@
   
   @media (min-width: 768px) {
     .bottom {
-      padding: 8rem 2.5rem 6rem 2.5rem;
+      padding: 7.5rem 2.5rem;
     }
   }
 
   @media (min-width: 1100px) {
     .bottom {
-      padding-block: 12rem 12.5rem;
+      padding-block: 10rem;
     }
   }
 }
