--- a/src/styles/components/subcomponents/_title-card.scss
+++ b/src/styles/components/subcomponents/_title-card.scss
@@ -3,7 +3,7 @@
   text-align: center;
   max-width: 379px;
 
-  span {
+  .new-product-label {
     opacity: 0.5;
   }
 
@@ -15,6 +15,16 @@
     opacity: 0.75;
     margin-bottom: 1.75rem;
     max-width: 349px;
+  }
+
+  .price {
+    margin-bottom: 2rem;
+    color: $pureBlack;
+  }
+
+  &__actions {
+    display: flex;
+    gap: 1rem;
   }
 
   @media (min-width: 768px) {
@@ -30,5 +40,9 @@
   @media (min-width: 1100px) {
     align-items: flex-start;
     text-align: left;
+
+    .price {
+      margin-bottom: 3rem;
+    }
   }
 }
