--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,10 +1,7 @@
-@import "home";
-@import "category";
-
 .page {
   background-color: $white;
   
-  .bottom {
+  .bottom, .top {
     @include flexCenter;
     width: 100%;
     padding: 4rem 1.5rem 7.5rem 1.5rem;
@@ -16,14 +13,18 @@
   }
   
   @media (min-width: 768px) {
-    .bottom {
+    .bottom, .top {
       padding: 7.5rem 2.5rem;
     }
   }
 
   @media (min-width: 1100px) {
-    .bottom {
+    .bottom, .top {
       padding-block: 10rem;
     }
   }
 }
+
+@import "home";
+@import "category";
+@import "product";
