--- a/src/styles/pages/_product.scss
+++ b/src/styles/pages/_product.scss
@@ -5,38 +5,25 @@
 
     .wrapper {
       gap: 0;
+    }
+  }
 
-      .product {
-        &__item {
-          display: flex;
-          flex-direction: column;
-          gap: 2rem;
+  @media (min-width: 768px) {
+    .top {
+      padding-top: 2rem;
 
-          picture {
-            img {
-              object-fit: cover;
-              width: 100%;
-              border-radius: $borderRadius;
-            }
-          }
+      .wrapper {
 
-          .title-card {
-            align-items: flex-start;
-            text-align: left;
+      }
+    }
+  }
 
-            .new-product-label {
-              margin-bottom: 1rem;
-            }
+  @media (min-width: 1100px) {
+    .top {
+      padding-top: 5rem;
 
-            h1 {
-              margin-top: 0.5rem;
-            }
+      .wrapper {
 
-            p {
-              opacity: 0.5;
-            }
-          }
-        }
       }
     }
   }
