Finish product rec component

--- a/src/styles/components/subcomponents/_back-button.scss
+++ b/src/styles/components/subcomponents/_back-button.scss
@@ -5,4 +5,10 @@
   border: none;
   width: fit-content;
   align-self: flex-start;
+  cursor: pointer;
+  transition-duration: 200ms;
+
+  &:hover, &:focus {
+    color: $orange;
+  }
 }
