--- a/src/styles/pages/_product.scss
+++ b/src/styles/pages/_product.scss
@@ -2,6 +2,7 @@
   .top {
     margin-top: 91px;
     padding-top: 1rem;
+    padding-bottom: 0;
 
     .wrapper {
       gap: 0;
@@ -11,20 +12,12 @@
   @media (min-width: 768px) {
     .top {
       padding-top: 2rem;
-
-      .wrapper {
-
-      }
     }
   }
 
   @media (min-width: 1100px) {
     .top {
       padding-top: 5rem;
-
-      .wrapper {
-
-      }
     }
   }
 }
