Refactor nav scss and style cart

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -3,7 +3,7 @@
 @import "home";
 // @import "category";
 @import "product";
-// @import "cart";
+@import "checkout";
 
 @import "nav";
 @import "bottom-banner";
