--- a/src/styles/components/subcomponents/_button.scss
+++ b/src/styles/components/subcomponents/_button.scss
@@ -2,6 +2,7 @@
   color: $pureWhite;
   padding: 0.875rem 2rem;
   transition-duration: 200ms;
+  cursor: pointer;
 
   &__orange {
     background-color: $orange;
