--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -135,8 +135,7 @@ footer {
       ul {
         grid-row: 1;
         grid-column: 2;
-        height: 100%;
-        align-items: flex-end;
+        align-self: end;
       }
     }
   }
