--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -20,11 +20,11 @@
     height: 100%;
   }
 
-  ul {
+  &__list {
     display: none;
   }
 
-  button {
+  &__menu-button, &__cart-button {
     background: none;
     border: none;
     padding: 1.5rem;
@@ -65,7 +65,7 @@
       left: auto;
     }
 
-    ul {
+    &__list {
       display: flex;
       justify-content: center;
       gap: 2.125rem;
@@ -113,7 +113,7 @@
 
 .overlay {
   position: fixed;
-  z-index: 10;
+  z-index: 50;
   height: 100%;
   width: 100%;
   background-color: rgba($pureBlack, 0.4);
