--- a/src/styles/components/subcomponents/_button.scss
+++ b/src/styles/components/subcomponents/_button.scss
@@ -3,6 +3,7 @@
   padding: 0.875rem 2rem;
   transition-duration: 200ms;
   cursor: pointer;
+  text-align: center;
 
   &__orange {
     background-color: $orange;
