--- a/src/styles/components/checkout/_form.scss
+++ b/src/styles/components/checkout/_form.scss
@@ -4,6 +4,7 @@
   gap: 2rem;
   padding: 2rem 1.5rem;
   background-color: $pureWhite;
+  border-radius: $borderRadius;
 
   h2 {
     color: $orange;
@@ -19,8 +20,7 @@
       gap: 1.5rem;
 
       li {
-        display: flex;
-        flex-direction: column;
+        display: grid;
         gap: 0.5rem;
         
         input {
@@ -72,5 +72,54 @@
     text-align: center;
     gap: 1rem;
     margin-top: 2rem;
+    
+    p {
+      opacity: 0.5;
+    }
   }
+
+  @media (min-width: 768px) {
+    gap: 2.5rem;
+
+    section {
+      ul {
+        gap: 1rem;
+      }
+    }
+    
+    ul, fieldset {
+      grid-template-columns: 1fr 1fr;
+    }
+
+    &__cash-message {
+      flex-direction: row;
+      text-align: left;
+      gap: 2rem;
+    }
+
+    &__shipping-info {
+      .address {
+        grid-column: span 2;
+      }
+    }
+
+    &__payment-details {
+      display: grid;
+      
+      legend {
+        display: contents;
+        grid-row: 1;
+        grid-column: 1;
+        height: 100%;
+      }
+      
+      div {
+        grid-column: 2;
+      }
+    }
+  }
+
+  // @media (min-width: 1100px) {
+  //   flex-direction: row;
+  // }
 }
