--- a/src/styles/components/subcomponents/_quantity-button.scss
+++ b/src/styles/components/subcomponents/_quantity-button.scss
@@ -1,11 +1,16 @@
 .quantity-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: $grey;
+  width: 120px;
 
   button {
     background: none;
     border: none;
-    padding: 1rem;
+    padding-block: 1rem;
     cursor: pointer;
+    width: 40px;
     
     span {
       opacity: 0.25;
@@ -17,9 +22,10 @@
   }
 
   p {
-    padding: 1rem;
-    display: inline;
     color: $pureBlack;
     opacity: 1 !important;
+    width: 40px;
+    text-align: center;
+    margin-bottom: 0;
   }
 }
